upd: index.js を作成、manifest.json に追加

--- a/manifest.json
+++ b/manifest.json
@@ -2,5 +2,15 @@
   "manifest_version": 3,
   "name": "AdAttack",
   "version": "1.0.0",
-  "description": "「攻めの守り」を実現する、新時代の広告対策"
+  "description": "「攻めの守り」を実現する、新時代の広告対策",
+  "content_scripts": [
+    {
+      "matches": [
+        "<all_urls>"
+      ],
+      "js": [
+        "index.js"
+      ]
+    }
+  ]
 }
