upd: 動作制御用の拡張機能ポップアップを登録

--- a/manifest.json
+++ b/manifest.json
@@ -3,6 +3,9 @@
   "name": "AdAttack",
   "version": "1.0.0",
   "description": "「攻めの守り」を実現する、新時代の広告対策",
+  "action": {
+    "default_popup": "assets/default_popup.html"
+  },
   "content_scripts": [
     {
       "matches": [
