fix: srcをweb_accessible_resourcesに追加

--- a/manifest.json
+++ b/manifest.json
@@ -15,5 +15,15 @@
         "index.js"
       ]
     }
+  ],
+  "web_accessible_resources": [
+    {
+      "matches": [
+        "<all_urls>"
+      ],
+      "resources": [
+        "src/*"
+      ]
+    }
   ]
 }
