--- a/manifest.json
+++ b/manifest.json
@@ -3,6 +3,12 @@
   "name": "AdAttack",
   "version": "1.0.0",
   "description": "「攻めの守り」を実現する、新時代の広告対策",
+  "icons": {
+    "16": "assets/images/icons/icon16.png",
+    "32": "assets/images/icons/icon32.png",
+    "48": "assets/images/icons/icon48.png",
+    "128": "assets/images/icons/icon128.png"
+  },
   "action": {
     "default_popup": "assets/default_popup.html"
   },
